--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <div id="buttonColumn"></div>
 
-          <div class="card" style="width: 18rem">
+          <div class="card col-5" >
             <ul id="currentData" class="list-group list-group-flush">
               <!-- Current Day Card will appear here -->
             </ul>
