update city name

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </div>
 
     <main>
-      <div class="container">
-        <div class="row">
+      <div class="container" id="topContainer">
+        <div class="row topRow">
           <div class="col-4">
             <h3>Select a City</h3>
             <br />
@@ -46,10 +46,12 @@
             </form>
           </div>
           <div id="buttonColumn"></div>
+          
+          
 
-          <div class="card col-5" >
+          <div class="card col-5" id="currentCard">
             <ul id="currentData" class="list-group list-group-flush">
-              <!-- Current Day Card will appear here -->
+
             </ul>
           </div>
 
